--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,118 +4,125 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFE3E3"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/logoImageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/scb_medical_college_logo" />
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/logoImageView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text="User Login"
-            android:textAlignment="center"
-            android:textSize="30sp"
-            android:textColor="#ffffff"
-            android:textStyle="bold"
-            android:autoSizeMaxTextSize="60dp"
-            android:autoSizeMinTextSize="30dp"
-            style="@style/Base.TextAppearance.AppCompat.Body1"
-            android:visibility="gone"/>
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
 
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/buttonGoogle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:layout_marginTop="15dp"
-            android:visibility="gone"/>
+            <ImageView
+                android:id="@+id/logoImageView"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@drawable/scb_medical_college_logo" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="OR"
-            android:textAlignment="center"
-            android:textSize="15sp"
-            android:textColor="#ffffff"
-            android:textStyle="bold"
-            android:visibility="gone"/>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="35dp">
-
-            <EditText
-                android:id="@+id/editTextEmail"
+            <TextView
+                android:id="@+id/textView"
+                style="@style/Base.TextAppearance.AppCompat.Body1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
-                android:hint="Email"
-                android:textColorHint="#ffffff"
-                android:inputType="textEmailAddress" />
+                android:autoSizeMaxTextSize="60dp"
+                android:autoSizeMinTextSize="30dp"
+                android:text="User Login"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
 
-        </android.support.design.widget.TextInputLayout>
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/buttonGoogle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="60dp"
+                android:layout_marginBottom="15dp"
+                android:visibility="gone" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="OR"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="35dp">
+
+                <EditText
+                    android:id="@+id/editTextEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:textColorHint="#ffffff" />
+
+            </android.support.design.widget.TextInputLayout>
 
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="35dp">
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="35dp">
 
-            <EditText
-                android:id="@+id/editTextPassword"
+                <EditText
+                    android:id="@+id/editTextPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:textColorHint="#ffffff" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <Button
+                android:id="@+id/buttonLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="60dp"
+                android:layout_marginBottom="15dp"
+                android:onClick="userLogin"
+                android:text="Login" />
+
+            <TextView
+                android:id="@+id/textViewSignUp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
-                android:textColorHint="#ffffff"
-                android:hint="Password"
-                android:inputType="textPassword" />
+                android:onClick="signUpClicked"
+                android:text="Don't have an account? Sign up here"
+                android:textAlignment="center"
+                android:textColor="#0854ba"
+                android:textSize="15dp"
+                android:textStyle="bold" />
 
-        </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
 
-
-        <Button
-            android:id="@+id/buttonLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:layout_marginTop="15dp"
-            android:text="Login"
-            android:onClick="userLogin"/>
-
-        <TextView
-            android:id="@+id/textViewSignUp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text="Don't have an account? Sign up here"
-            android:textAlignment="center"
-            android:onClick="signUpClicked"
-            android:textStyle="bold"
-            android:textColor="#0854ba"
-            android:textSize="15dp"/>
-
-    </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
