--- a/app/src/main/res/layout/image_dialog.xml
+++ b/app/src/main/res/layout/image_dialog.xml
@@ -9,7 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp">
-            <ImageView
+            <com.github.chrisbanes.photoview.PhotoView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/medicalRelatedPicImage"/>
