--- a/app/src/main/res/layout/activity_user_professional_first1.xml
+++ b/app/src/main/res/layout/activity_user_professional_first1.xml
@@ -281,15 +281,15 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@drawable/mock_test">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Mock Test"
                     android:textAlignment="center"
                     android:textSize="30sp"
                     android:textStyle="bold" />
