--- a/app/src/main/res/layout/fragment_schematic_map.xml
+++ b/app/src/main/res/layout/fragment_schematic_map.xml
@@ -6,22 +6,10 @@
     tools:context=".SchematicMapFragment"
     android:background="#ffffff">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="SCHEMATIC MAP"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:id="@+id/schematicMapHeading"/>
-
     <com.github.chrisbanes.photoview.PhotoView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/photoView"
-        android:layout_below="@+id/schematicMapHeading"
-        android:layout_margin="10dp"
-        />
+        android:layout_margin="10dp" />
 
 </RelativeLayout>
