--- a/app/src/main/res/layout/list_item_user_records.xml
+++ b/app/src/main/res/layout/list_item_user_records.xml
@@ -4,12 +4,49 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Heading"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:id="@+id/textViewRecordName"
-        android:gravity="center"/>
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Heading"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:id="@+id/textViewRecordName"
+            android:gravity="center"
+            android:layout_margin="8dp"
+            android:layout_toLeftOf="@+id/downloadPdf"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_file_download_black"
+            android:layout_margin="8dp"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/downloadPdf"
+            android:layout_alignParentRight="true" />
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewRecordName"
+            android:id="@+id/seekBarDownload"
+            android:visibility="gone"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/downloadText"
+            android:layout_below="@+id/seekBarDownload"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:visibility="gone"/>
+
+    </RelativeLayout>
+
+
 
 </android.support.v7.widget.CardView>
